# NightJet

./: .gitignore  AGENTS.md  Agent.md  LICENSE  MODEL_CARD.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
configs/: nightjet_edge_v1_reco_s2_c16_f3.yaml
configs/candidates/: edge_v1_reco_s2_c16_f3.yaml  edge_v1_reco_s2_c16_f5.yaml  edge_v1_reco_s2_c16_f5_reddit10.yaml  edge_v1_reco_s2_c24_f3.yaml
docker/: Dockerfile.orin  Dockerfile.train
docs/: architecture.md  export.md  huggingface.md  jetson.md  kubetorch.md  training.md
docs/reports/: candidate-leaderboard.md  detail-seeking-campaign.md  first-run-report.md  generated-candidate-leaderboard.md
examples/: enhance_image.py  enhance_video.py
huggingface/model/: README.md  WEIGHTS_LICENSE.md
huggingface/space/: README.md  app.py  requirements.txt
scripts/: build_train_image.sh  generate_candidate_leaderboard.sh
src/nightjet/: __init__.py  artifacts.py  blend.py  candidates.py  cli.py  config.py  data.py  devices.py  eval.py  export.py  frame_bundle.py  inference.py  kubetorch.py  losses.py  metrics.py  motion.py  reports.py  (+4 more)
tests/: test_blend.py  test_candidates.py  test_cli.py  test_config.py  test_data.py  test_devices.py  test_eval.py  test_export.py  test_frame_bundle.py  test_huggingface_space.py  test_inference.py  test_kubetorch.py  test_losses.py  test_model.py  test_motion.py  test_reports.py  test_runtime_engine.py  test_runtime_enhancer.py  test_runtime_nvtx.py  test_runtime_server.py  test_runtime_tensors.py  test_splits.py  test_staging.py  test_teacher_manifest.py  test_training_smoke.py
weights/: README.md  manifest.json  nightjet-edge-v1-detail.onnx  nightjet-edge-v1-detail.pt  nightjet-edge-v1.onnx  nightjet-edge-v1.pt
(+8 files in other folders)
